kubernetes-yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-application
        image: 108290765801.dkr.ecr.us-east-1.amazonaws.com/web-application:latest
        ports:
        - containerPort: 8080
