kubernetes-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
  selector:
    app: web-app
